--- a/Views/Main/Index.cshtml
+++ b/Views/Main/Index.cshtml
@@ -38,8 +38,9 @@
                 <div class="info-box blue-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count1.Totalcount</div>
-                    <div class="title">@ViewBag.count1.Regtype</div>
+                    <div class="count">@ViewBag.count1</div>
+                    <div class="title">FIRST REGISTRATION</div>
+
                 </div>
                 <!--/.info-box-->
             </div>
@@ -48,8 +49,9 @@
                 <div class="info-box brown-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count2.Totalcount</div>
-                    <div class="title">@ViewBag.count2.Regtype</div>
+                    <div class="count">@ViewBag.count2</div>
+                    <div class="title">TRANSFER OF REGISTRATION FORM OTHER STATE</div>
+
                 </div>
                 <!--/.info-box-->
             </div>
@@ -58,8 +60,8 @@
                 <div class="info-box dark-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count3.Totalcount</div>
-                    <div class="title">@ViewBag.count3.Regtype</div>
+                    <div class="count">@ViewBag.count3</div>
+                    <div class="title">Addition of Qualification</div>
                 </div>
                 <!--/.info-box-->
             </div>
@@ -68,8 +70,8 @@
                 <div class="info-box green-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count4.Totalcount</div>
-                    <div class="title">@ViewBag.count4.Regtype</div>
+                    <div class="count">@ViewBag.count4</div>
+                    <div class="title">RENEWAL REGISTRATION</div>
                 </div>
                 <!--/.info-box-->
             </div>
@@ -82,8 +84,8 @@
                 <div class="info-box dark-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count5.Totalcount</div>
-                    <div class="title">@ViewBag.count5.Regtype</div>
+                    <div class="count">@ViewBag.count5</div>
+                    <div class="title">TRANSFER OF REGISTRATION FROM OTHER STATE</div>
                 </div>
                 <!--/.info-box-->
             </div>
@@ -91,8 +93,8 @@
                 <div class="info-box green-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count6.Totalcount</div>
-                    <div class="title">@ViewBag.count6.Regtype</div>
+                    <div class="count">@ViewBag.count6</div>
+                    <div class="title">SMART CARD</div>
                 </div>
                 <!--/.info-box-->
             </div>
@@ -100,8 +102,8 @@
                 <div class="info-box brown-bg">
                     <i class="fa fa-users"></i>
 
-                    <div class="count">@ViewBag.count7.Totalcount</div>
-                    <div class="title">@ViewBag.count7.Regtype</div>
+                    <div class="count">@ViewBag.count7</div>
+                    <div class="title">INITIAL REGISTRATION</div>
                 </div>
                 <!--/.info-box-->
             </div>
