--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -51,7 +51,6 @@
         </div>
 
 
-
         <div class="input-group">
             <span class="input-group-addon"><i class="icon_key_alt"></i></span>
             @*@Html.LabelFor(model => model.usrpwd, htmlAttributes: new { @class = "control-label col-md-2" })*@
@@ -60,7 +59,7 @@
             @Html.ValidationMessageFor(model => model.usrpwd, "", new { @class = "text-danger" })
 
         </div>
-        <input type="submit" value="LoginIn" class="btn btn-primary btn-lg btn-block" />
+        <input type="submit" value="Login" class="btn btn-primary btn-lg btn-block" />
         @*<div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Create" class="btn btn-default" />
