--- a/Views/Main/Index.cshtml
+++ b/Views/Main/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model IEnumerable<WebApplication1.Models.getapplicationcountdata_Result1>*@
+﻿@model IEnumerable<WebApplication1.Models.getapplicationcountdata_Result1>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPage1.cshtml";
